finish adding all content and minimal styling

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="css/bootstrap-theme.min.css" rel="stylesheet" type="text/css">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <title>Portfolio: EManek</title>
   </head>
@@ -12,8 +13,8 @@
 
     <!--splash 'page'-->
     <div class="header container-fluid">
-      <div class="row .match-my-cols">
-        <div class="col-md-4"
+      <div class="row">
+        <div class="col-md-4">
           <h1>Ewa</h1>
         </div>
         <div class="col-md-4">
@@ -32,7 +33,7 @@
       <h2>Portfolio</h2>
       <div class="row match-my-cols">
         <div class="col-md-3 col-sm-6">
-          <a href="http://ewajm.github.io/shelter/"><img class="img-responsive center-block" src="img/page_01.png" alt="Screenshot of Oozetopia website, a fictional ooze shelter and adoption center"></a>
+          <a href="http://ewajm.github.io/shelter/"><img class="img-responsive center-block" src="img/ooze.jpg" alt="Screenshot of Oozetopia website, a fictional ooze shelter and adoption center"></a>
         </div>
         <div class="col-md-3 col-sm-6">
           <h3>Fictional Shelter Website</h3>
@@ -41,10 +42,10 @@
             <li>HTML</li>
             <li>CSS</li>
           </ul>
-          <p>Github Link</p>
+          <p class ="repolink"><a href="https://github.com/ewajm/shelter">Github Link</a></p>
         </div>
         <div class="col-md-3 col-sm-6">
-          <a href="http://ewajm.github.io/shelter/"><img class="img-responsive center-block" src="img/page_01.png" alt="Screenshot of simple Machu Picchu website with no meaningful content"></a>
+          <a href="http://ewajm.github.io/peru/"><img class="img-responsive center-block" src="img/peru.png" alt="Screenshot of simple Machu Picchu website with no meaningful content"></a>
         </div>
         <div class="col-md-3 col-sm-6">
           <h3>Vacation Website</h3>
@@ -54,13 +55,13 @@
             <li>CSS</li>
             <li>Bootstrap</li>
           </ul>
-          <p>Github Link</p>
+          <p class ="repolink"><a href="https://github.com/ewajm/peru">Github Link</a></p>
         </div>
       </div><!--end row-->
 
       <div class="row match-my-cols">
         <div class="col-md-3 col-md-push-3 col-sm-6">
-          <a href="http://ewajm.github.io/shelter/"><img class="img-responsive center-block" src="img/page_01.png" alt="Screenshot of website with tic tac toe game"></a>
+          <a href="http://codepen.io/emanek/full/PzJYXV/"><img class="img-responsive center-block" src="img/tic.png" alt="Screenshot of website with tic tac toe game"></a>
         </div>
         <div class="col-md-3 col-md-pull-3 col-sm-6">
           <h3>Tic Tac Toe</h3>
@@ -71,10 +72,12 @@
             <li>HTML</li>
             <li>CSS</li>
           </ul>
-          <p>Github Gist Link</p>
+          <p class ="repolink">
+            <a href="https://gist.github.com/ewajm/f25e10851ac45399ab09fa21f7ed4b97">Github Gist Link</a>
+          </p>
         </div>
         <div class="col-md-3 col-md-push-3 col-sm-6">
-          <a href="http://ewajm.github.io/shelter/"><img class="img-responsive center-block" src="img/page_01.png" alt="Screenshot of simple website showcasing a simon game"></a>
+          <a href="http://codepen.io/emanek/full/Eyokpv/s"><img class="img-responsive center-block" src="img/simon.png" alt="Screenshot of simple website showcasing a simon game"></a>
         </div>
         <div class="col-md-3 col-md-pull-3 col-sm-6">
           <h3>Simon Recreation</h3>
@@ -85,7 +88,9 @@
             <li>HTML</li>
             <li>CSS</li>
           </ul>
-          <p>Github Gist Link</p>
+          <p class ="repolink">
+            <a href="https://gist.github.com/ewajm/d53d13a687caf4e319e6e90b81bb6ffc">Github Gist Link</a>
+          </p>
         </div>
       </div><!--end row-->
 
@@ -93,21 +98,26 @@
     <!--end portfolio-->
 
     <!--about me-->
-    <div class="container-fluid">
-      <div class="row .match-my-cols">
+    <div class="about container-fluid">
+      <div class="row match-my-cols">
         <div class="col-md-6">
           <h3>About:</h3>
           <p>I am currently a student at Epicodues with the goal of becoming a professional developer.  I am primarily interested in backend work, and am familiar with: </p>
           <ol>
             <li>JavaScript and Jquery</li>
-            <li>Java (especially as applied to Android Dev)</li>
+            <li>Java (especially as applied to Android)</li>
             <li>Html and CSS</li>
           </ol>
           <p>In my spare time, I enjoy board/video games, crochet, and checking out Portland's craft beer scene. In a previous life, I got an MA in Modern East Asian Cultural Studies, so I am also available for rants about how Shinto does not actually exist and Orientalism.</p>
         </div>
         <div class="col-md-6">
-          <h3>Check me out (including more of my work) at:</h3>
-          <p>(font awesome links to be added)</p>
+          <h3>More:</h3>
+          <p class="social">
+            <a href="https://www.linkedin.com/in/manekej"><b class="fa fa-linkedin-square"></b></a>
+            <a href="https://github.com/ewajm/"><b class="fa fa-github"></b></a>
+            <a href="https://bitbucket.org/ewam/"><b class="fa fa-bitbucket"></b></a>
+            <a href="https://codepen.io/emanek/"><b class="fa fa-codepen"></b></a>
+          </p>
         </div>
       </div><!--end row-->
       <p class="footer">(C)<a href="mailt:manekej@gmail.com">EManek</a>.</p>
