--- a/index.html
+++ b/index.html
@@ -7,8 +7,30 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <title>Portfolio: EManek</title>
   </head>
-  <body>
+  <body data-spy="scroll" data-taret="#mynav">
     <!--nav-->
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#mynav" aria-expanded="false">
+            <span class="sr-only">Toggle Navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">
+            EManek
+          </a>
+        </div>
+
+        <div class="collapse navbar-collapse" id="mynav">
+          <ul class="nav navbar-nav">
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#about">About</a></li>
+          </ul>
+        </div>
+      </div><!--end container-fluid-->
+    </nav>
     <!-- end nav-->
 
     <!--splash 'page'-->
@@ -29,7 +51,7 @@
     <!--end splash page-->
 
     <!--portfolio section-->
-    <div class="portfolio container-fluid">
+    <div id="portfolio" class="container-fluid">
       <h2>Portfolio</h2>
       <div class="row match-my-cols">
         <div class="col-md-3 col-sm-6">
@@ -98,7 +120,7 @@
     <!--end portfolio-->
 
     <!--about me-->
-    <div class="about container-fluid">
+    <div id="about" class="container-fluid">
       <div class="row match-my-cols">
         <div class="col-md-6">
           <h3>About:</h3>
