Add further tweaks and fix issue with links on dark backgrounds

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <li>HTML</li>
             <li>CSS</li>
           </ul>
-          <p class ="repolink"><a href="https://github.com/ewajm/shelter">Github Link</a></p>
+          <p class ="repolink glow"><a href="https://github.com/ewajm/shelter">Github Link</a></p>
         </div>
         <div class="col-md-3 col-sm-6 peru-back">
           <a href="http://ewajm.github.io/peru/"><img class="img-responsive center-block" src="img/peru.png" alt="Screenshot of simple Machu Picchu website with no meaningful content"></a>
@@ -80,7 +80,7 @@
             <li>CSS</li>
             <li>Bootstrap</li>
           </ul>
-          <p class ="repolink"><a href="https://github.com/ewajm/peru">Github Link</a></p>
+          <p class ="repolink glow"><a href="https://github.com/ewajm/peru">Github Link</a></p>
         </div>
       </div><!--end row-->
       <div class="row match-my-cols">
@@ -96,7 +96,7 @@
             <li>HTML</li>
             <li>CSS</li>
           </ul>
-          <p class ="repolink">
+          <p class ="repolink glow">
             <a href="https://gist.github.com/ewajm/f25e10851ac45399ab09fa21f7ed4b97">Github Gist Link</a>
           </p>
         </div>
@@ -112,7 +112,7 @@
             <li>HTML</li>
             <li>CSS</li>
           </ul>
-          <p class ="repolink">
+          <p class ="repolink glow">
             <a href="https://gist.github.com/ewajm/d53d13a687caf4e319e6e90b81bb6ffc">Github Gist Link</a>
           </p>
         </div>
@@ -125,9 +125,9 @@
     <div id="about" class="dark-back container-fluid">
       <div class="row match-my-cols">
         <div class="col-md-6">
-          <h3>About:</h3>
+          <h2>About:</h2>
           <p>
-            I am currently a student at Epicodus with the goal of becoming a professional developer.  I am primarily interested in backend work, and have experience in:
+            I am currently a student at Epicodus with the goal of becoming a professional developer.  I am primarily interested in backend work, and have experience in (most to least):
           </p>
           <ol>
             <li><strong>JavaScript and Jquery</strong></li>
@@ -140,7 +140,7 @@
           </p>
         </div>
         <div class="col-md-6 col-sm-12">
-          <h3>More:</h3>
+          <h2>More:</h2>
           <p class="social">
             <a href="https://www.linkedin.com/in/manekej"><b class="fa fa-linkedin-square"></b></a>
             <a href="https://github.com/ewajm/"><b class="fa fa-github"></b></a>
