Add final fixes and extra portfolio items

--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
             EManek
           </a>
         </div>
-
         <div class="collapse navbar-collapse" id="mynav">
           <ul class="nav navbar-nav">
             <li><a href="#portfolio">Portfolio</a></li>
@@ -33,7 +32,6 @@
       </div><!--end container-fluid-->
     </nav>
     <!-- end nav-->
-    <div class="wrapper">
     <!--splash 'page'-->
     <div class="header light-back container-fluid">
       <div class="row">
@@ -48,18 +46,16 @@
         </div>
       </div>
     </div><!--end container-fluid-->
-
     <!--end splash page-->
 
     <!--portfolio section-->
     <div id="portfolio" class="med-back container-fluid">
-      <h2>Portfolio</h2>
-      <div class="row match-my-cols">
+      <h2>Portfolio:</h2>
 
+      <div class="row match-my-cols">
         <div class="col-md-3 col-sm-6 ooze-back">
           <a href="http://ewajm.github.io/shelter/"><img class="img-responsive center-block" src="img/ooze.png" alt="Screenshot of Oozetopia website, a fictional ooze shelter and adoption center"></a>
         </div>
-
         <div class="col-md-3 col-sm-6 ooze-back">
           <h3>Fictional Shelter Website</h3>
           <p>Static, responsive website created at Epicodus practicing the following: </p>
@@ -83,6 +79,7 @@
           <p class ="repolink glow"><a href="https://github.com/ewajm/peru">Github Link</a></p>
         </div>
       </div><!--end row-->
+
       <div class="row match-my-cols">
         <div class="col-md-3 col-md-push-3 col-sm-6 tic-back">
           <a href="http://codepen.io/emanek/full/PzJYXV/"><img class="img-responsive center-block" src="img/tic.png" alt="Screenshot of website with tic tac toe game"></a>
@@ -118,6 +115,36 @@
         </div>
       </div><!--end row-->
 
+      <div class="row match-my-cols">
+        <div class="col-md-3 col-sm-6 quote-back">
+          <a href="http://codepen.io/emanek/full/aNMWmw/"><img class="img-responsive center-block" src="img/quote.png" alt="Screenshot of quote generator"></a>
+        </div>
+        <div class="col-md-3 col-sm-6 quote-back">
+          <h3>Random Quote Generator</h3>
+          <p>Static website created for FreeCodeCamp as practice connecting to an API: </p>
+          <ul>
+            <li>JQuery</li>
+            <li>JavaScript</li>
+            <li>HTML</li>
+            <li>CSS</li>
+          </ul>
+          <p class ="repolink glow">
+            <a href="https://gist.github.com/ewajm/08870ba2ed20e4f56e7bdba0ce41411f">Github Gist Link</a>
+          </p>
+        </div>
+        <div class="col-md-3 col-sm-6 cat-back">
+          <a href="https://ewajm.github.io/pet-webpage/"><img class="img-responsive center-block" src="img/cat.png" alt="Screenshot of simple website centered around a cat"></a>
+        </div>
+        <div class="col-md-3 col-sm-6 cat-back">
+          <h3>Pet Website</h3>
+          <p>Static website created at Epicodus practicing basic HTML and CSS: </p>
+          <ul>
+            <li>HTML</li>
+            <li>CSS</li>
+          </ul>
+          <p class ="repolink glow"><a href="https://github.com/ewajm/pet-webpage">Github Link</a></p>
+        </div>
+      </div><!--end row-->
     </div><!--end container-fluid div-->
     <!--end portfolio-->
 
@@ -131,7 +158,7 @@
           </p>
           <ol>
             <li><strong>JavaScript and Jquery</strong></li>
-            <li><strong>Java (especially as applied to Android)</strong></li>
+            <li><strong>Java (mostly Android-based)</strong></li>
             <li><strong>Html and CSS</strong></li>
           </ol>
           <p>
@@ -149,11 +176,9 @@
           </p>
         </div>
       </div><!--end row-->
-
     </div><!--end container-fluid div-->
     <!--end about me-->
-    <p class="footer">(C)<a href="mailt:manekej@gmail.com">EManek</a>.</p>
-    </div><!--end wrapper div-->
+    <p class="footer">(C)<a href="mailto:manekej@gmail.com">EManek</a>.</p>
     <script   src="https://code.jquery.com/jquery-3.1.0.min.js"   integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s="   crossorigin="anonymous"></script>
     <script src="js/bootstrap.min.js"></script>
   </body>
