--- a/index.html
+++ b/index.html
@@ -33,18 +33,20 @@
     </nav>
     <!-- end nav-->
     <!--splash 'page'-->
-    <div class="header light-back container-fluid">
-      <div class="row">
-        <div class="col-md-4">
-          <h1 class="animated fadeIn">Ewa</h1>
+    <div class="container-fluid header light-back">
+      <div class="jumbotron">
+        <div class="row">
+          <div class="col-md-4">
+            <h1 class="animated fadeIn">Ewa</h1>
+          </div>
+          <div class="col-md-4">
+            <img class="img-responsive" src="img/me.jpg" alt="picture of Ewa Manek">
+          </div>
+          <div class="col-md-4">
+            <h1 class="animated fadeIn">Manek</h1>
+          </div>
         </div>
-        <div class="col-md-4">
-          <img class="img-responsive" src="img/me.jpg" alt="picture of Ewa Manek">
-        </div>
-        <div class="col-md-4">
-          <h1 class="animated fadeIn">Manek</h1>
-        </div>
-      </div>
+      </div><!--end jumbotron-->
     </div><!--end container-fluid-->
     <!--end splash page-->
 
@@ -149,7 +151,7 @@
     <!--end portfolio-->
 
     <!--about me-->
-    <div id="about" class="dark-back container-fluid">
+    <div id="about" class="container-fluid dark-back">
       <div class="row match-my-cols">
         <div class="col-md-6">
           <h2>About:</h2>
