Add larger email and skills to splash page with some animations

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div class="jumbotron">
         <div class="row">
           <div class="col-md-4">
-            <h1 class="animated fadeIn">Ewa</h1>
+            <h1 id="myName" class="animated fadeIn">Ewa</h1>
           </div>
           <div class="col-md-4">
             <img class="img-responsive" src="img/me.jpg" alt="picture of Ewa Manek">
@@ -45,7 +45,8 @@
           <div class="col-md-4">
             <h1 class="animated fadeIn">Manek</h1>
           </div>
-        </div>
+        </div><!--end row-->
+        <h2 id="mySkillz" class="light-text animated">HTML and CSS now, Java, Javascript and Android soon</h2>
       </div><!--end jumbotron-->
     </div><!--end container-fluid-->
     <!--end splash page-->
@@ -171,6 +172,7 @@
         <div class="col-md-6 col-sm-12">
           <h2>More:</h2>
           <p class="social">
+            <a href="mailto: manekej@gmail.com">manekej@gmail.com</a><br>
             <a href="https://www.linkedin.com/in/manekej"><b class="fa fa-linkedin-square"></b></a>
             <a href="https://github.com/ewajm/"><b class="fa fa-github"></b></a>
             <a href="https://bitbucket.org/ewam/"><b class="fa fa-bitbucket"></b></a>
@@ -183,5 +185,6 @@
     <p class="footer">(C)<a href="mailto:manekej@gmail.com">EManek</a>.</p>
     <script   src="https://code.jquery.com/jquery-3.1.0.min.js"   integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s="   crossorigin="anonymous"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/index.js"></script>
   </body>
 </html>
