--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <h1 class="animated fadeIn">Manek</h1>
           </div>
         </div><!--end row-->
-        <h2 id="mySkillz" class="light-text animated">HTML and CSS now, Java, Javascript and Android soon</h2>
+        <h2 id="mySkillz" class="light-text animated">HTML and CSS now, Javascript and jQuery soon</h2>
       </div><!--end jumbotron-->
     </div><!--end container-fluid-->
     <!--end splash page-->
