--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
-    <link href="css/bootstrap-theme.min.css" rel="stylesheet" type="text/css">
     <link href="css/animate.css" rel="stylesheet" type="text/css">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <title>Portfolio: EManek</title>
   </head>
   <body class="gradient" data-spy="scroll" data-taret="#mynav">
+    <a id="top"></a>
     <!--nav-->
     <nav class="navbar navbar-default navbar-fixed-top">
       <div id="navcontainer" class="container-fluid">
@@ -19,7 +19,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="#top">
             EManek
           </a>
         </div>
@@ -183,7 +183,7 @@
     </div><!--end container-fluid div-->
     <!--end about me-->
     <p class="footer">(C)<a href="mailto:manekej@gmail.com">EManek</a>.</p>
-    <script   src="https://code.jquery.com/jquery-3.1.0.min.js"   integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s="   crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.1.0.min.js"   integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s="   crossorigin="anonymous"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/index.js"></script>
   </body>
