Add custom heading font

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="css/animate.css" rel="stylesheet" type="text/css">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
@@ -166,7 +167,7 @@
             <li><strong>Html and CSS</strong></li>
           </ol>
           <p>
-            In my spare time, I enjoy board/video games, crochet, and checking out Portland's craft beer scene. In a previous life, I got an MA in Modern East Asian Cultural Studies, so I am <em>also</em> available for rants about how Shinto does not actually exist and Orientalism.<br>
+            In my spare time, I enjoy board/video games, crochet, and checking out Portland's craft beer scene. In a previous life, I got an MA in Modern East Asian Cultural Studies, so I am also available for rants about how Shinto does not actually exist and Orientalism.<br>
           </p>
         </div>
         <div class="col-md-6 col-sm-12">
