update with new skills

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <h1 class="animated fadeIn">Manek</h1>
           </div>
         </div><!--end row-->
-        <h2 id="mySkillz" class="light-text animated">HTML and CSS now, Javascript and jQuery soon</h2>
+        <h2 id="mySkillz" class="light-text animated">Java, JavaScript, Android</h2>
       </div><!--end jumbotron-->
     </div><!--end container-fluid-->
     <!--end splash page-->
@@ -157,7 +157,7 @@
         <div class="col-md-6">
           <h2>About:</h2>
           <p>
-            I am currently a student at Epicodus with the goal of becoming a professional developer.  I am primarily interested in backend work, and have experience in (most to least):
+            I am currently a student at Epicodus with the goal of becoming a professional developer.  While many of my projects have primarily involved front end web development, I am very interested in backend work, as well. Currenly, I have experience in (most to least):
           </p>
           <ol>
             <li><strong>JavaScript and Jquery</strong></li>
@@ -165,8 +165,7 @@
             <li><strong>Html and CSS</strong></li>
           </ol>
           <p>
-            In my spare time, I enjoy board/video games, crochet, and checking out Portland's craft beer scene. In a previous life, I got an MA in Modern East Asian Cultural Studies, so I am <em>also</em> available for rants about how Shinto does not actually exist and Orientalism.<br>
-            <span>Also it's possible my favorite color is blue.</span>
+            In my spare time, I enjoy board/video games, crochet, and checking out Portland's craft beer scene. In a previous life, I got an MA in Modern East Asian Cultural Studies, so I am also available for rants about how Shinto does not actually exist and Orientalism.<br>
           </p>
         </div>
         <div class="col-md-6 col-sm-12">
