font size changes

--- a/index.html
+++ b/index.html
@@ -158,11 +158,11 @@
         <div class="col-md-6">
           <h1>About:</h1>
           <p>
-            I am currently a student at Epicodus with the goal of becoming a professional developer.  I am primarily drawn to mobile and backend work, but I am always interested in learning something new.  I am most experienced in (most to least):
+            I am an Epicodus graduate looking for development work.  I am primarily drawn to mobile and backend work, but I am always interested in learning something new.  I am most experienced in:
           </p>
           <ol>
             <li><strong>Java/Android</strong></li>
-            <li><strong>Firebase</strong></li>
+            <li><strong>Ruby/Rails</strong></li>
             <li><strong>JavaScript, including the Jquery library and the Angular2 and Ember frameworks</strong></li>
             <li><strong>Html and CSS</strong></li>
           </ol>
